2003-06-09 Simon Waters <Simon@wretched.demon.co.uk>      

	* Ensure comments all use tradition /* */ syntax

2003-04-06 Simon Waters <Simon@wretched.demon.co.uk>      

        * Correct GenCheckEscapes to return no moves
          when not in check. For "show escape" command.

        * Disambiguate hints

2003-03-16 Simon Waters <Simon@wretched.demon.co.uk>      

	* Remove stale Threat Extension code

2003-03-12 Simon Waters <Simon@wretched.demon.co.uk>      

	* Fix En Passant handling in white/black commands

	* Fix to HashSize handling

--- 5.06 Released

2003-03-10 Simon Waters <Simon@wretched.demon.co.uk>      

	* Remove obselete M4 include file.

2003-03-09 Simon Waters <Simon@wretched.demon.co.uk>      

	* Fix preprocessor directives for Macro names.

2003-03-07 Simon Waters <Simon@wretched.demon.co.uk>      

	* Always used bundled geopt's to simply build

2003-03-06 Simon Waters <Simon@wretched.demon.co.uk>      

	* Correct pthread handling in configure.ac

	* Correct LIBOBJS handling on platforms without getopt_long

	* Avoid deprecated multiline string literals in cmd.c

	* Avoid redefining MAX and MIN macros on HPUX

	* Make pawncover constant to avoid difference between 
	  first and subsequent games. Affects many King safety 
	  calculations.

2003-02-16 Simon Waters <Simon@wretched.demon.co.uk>

	* Add getopt files to distribution for platforms without 
	  GNU C library

	* Replace ac_need_stdint_h with ac_create_stdint_h

	* Add acx_pthread, config.sub, config.guess

2003-02-11 Simon Waters <Simon@wretched.demon.co.uk>

	* Drop enpassant knowledge on "switch" command.

	* Add in 2 move exception to EvaluateDraw to
	  avoid drawing won games.

2003-02-05 Simon Waters <Simon@wretched.demon.co.uk>

	* Various string length issues tidied up.

2003-01-31 Simon Waters <Simon@wretched.demon.co.uk>

	* Implement "white" and "black" commands.

2003-01-29 Anil Mungal <vagrancy@rogers.com>
