@@ -672,24 +672,9 @@ void InitVars (void)
    phase = PHASE;
 
 /*  Calculate the ttable hashmask & pawntable hashmask */
-   if ( HashSize == 0 ){
-     i = HASHSLOTS;
-     TTHashMask = 0;
-     while ((i>>=1) > 0)
-     {
-        TTHashMask <<= 1;
-        TTHashMask |= 1;
-     }
-     HashSize = TTHashMask + 1; 
-   }
-   i = PAWNSLOTS;
-   PHashMask = 0;
-   while ((i>>=1) > 0)
-   {
-      PHashMask <<= 1;
-      PHashMask |= 1;
-   }
-
+   if ( HashSize == 0 )
+     CalcHashSize(HashSize);
+     
    signal (SIGINT, EndSearch);
 
    nmovesfrombook = 0;
@@ -730,53 +715,54 @@ void InitHashCode (void)
 
 void InitHashTable (void)
 /****************************************************************************
- *
- *  Allocate memory for our transposition tables.  By default, the
- *  transposition table will have 16K entries; 8K for each color.
- *  Add code to allocated memory for pawn table as well.
- *
- ****************************************************************************/
+  *
+  *  Allocate memory for our transposition tables.  By default, the
+  *  transposition table will have 16K entries; 8K for each color.
+  *  Add code to allocated memory for pawn table as well.
+  *
+  ****************************************************************************/
 {
-   unsigned int size;
- 
-   /* One can not use realloc() here, it screws up error handling */
-   do {
-     free(HashTab[0]);
-     free(HashTab[1]);
-     HashTab[0] = malloc (HashSize * sizeof (HashSlot));
-     HashTab[1] = malloc (HashSize * sizeof (HashSlot));
-     if (HashTab[0] == NULL || HashTab[1] == NULL) {
-        printf ("Not enough memory for transposition table, trying again.\n");
-        HashSize >>= 1;
-	TTHashMask >>= 1;
-	if (HashSize == 0) {
-	  fprintf(stderr, "Memory exhausted, goodbye, my friend.\n");
-	  exit(EXIT_FAILURE);
-	}
-	continue;
-     }
-   } while (0);
-   size = (HashSize * 2 * sizeof (HashSlot)) >> 10;
-   if (!(flags & XBOARD)) {
-     printf ("Transposition table:  Entries=%dK Size=%dK\n", 
-             HashSize>>10, size);
-   }
-
-   /*
-    * Here realloc() is O.K., though not very useful, because PAWNSLOTS
-    * is constant anyway.
-    */
-   PawnTab[0] = (PawnSlot *) realloc (PawnTab[0], PAWNSLOTS * sizeof (PawnSlot));
-   PawnTab[1] = (PawnSlot *) realloc (PawnTab[1], PAWNSLOTS * sizeof (PawnSlot));
-   if (PawnTab[0] == NULL || PawnTab[1] == NULL) {
-      printf ("Not enough memory for pawn table, goodbye.\n");
-      exit(EXIT_FAILURE);
-   } else {
-      size = (PAWNSLOTS * 2 * sizeof (PawnSlot)) >> 10;
-      if (!(flags & XBOARD))
-	printf ("Pawn hash table: Entries=%dK Size=%dK\n",
-		PAWNSLOTS >> 10, size);
-   }
+    unsigned int size;
+    unsigned int allocating = 1;
+    /* One can not use realloc() here, it screws up error handling */
+    do {
+      free(HashTab[0]);
+      free(HashTab[1]);
+      HashTab[0] = malloc (HashSize * sizeof (HashSlot));
+      HashTab[1] = malloc (HashSize * sizeof (HashSlot));
+      if (HashTab[0] == NULL || HashTab[1] == NULL) {
+         printf ("Not enough memory for transposition table, trying again.\n");
+         if (HashSize == HASHSLOTS) {
+           fprintf(stderr, "Memory exhausted, goodbye, my friend.\n");
+           exit(EXIT_FAILURE);
+         }
+         CalcHashSize(HashSize>>1);
+      }
+      else
+         allocating = 0;
+    } while (allocating);
+    size = (HashSize * 2 * sizeof (HashSlot)) >> 10;
+    if (!(flags & XBOARD)) {
+      printf ("Transposition table:  Entries=%dK Size=%dK\n",
+              HashSize>>10, size);
+    }
+    /*
+     * Here realloc() is O.K., though not very useful, because PAWNSLOTS
+     * is constant anyway.
+     */
+    PawnTab[0] = (PawnSlot *) realloc (PawnTab[0], PAWNSLOTS * sizeof 
+(PawnSlot));
+    PawnTab[1] = (PawnSlot *) realloc (PawnTab[1], PAWNSLOTS * sizeof 
+(PawnSlot));
+    if (PawnTab[0] == NULL || PawnTab[1] == NULL) {
+       printf ("Not enough memory for pawn table, goodbye.\n");
+       exit(EXIT_FAILURE);
+    } else {
+       size = (PAWNSLOTS * 2 * sizeof (PawnSlot)) >> 10;
+       if (!(flags & XBOARD))
+         printf ("Pawn hash table: Entries=%dK Size=%dK\n",
+                 PAWNSLOTS >> 10, size);
+    }
 }
 
 
